# dao

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dao.rb  install.js  package.json  review.policy.yaml
.github/workflows/: ci.yml  release.yml
crates/dao-cli/: Cargo.toml
crates/dao-cli/src/: lib.rs  main.rs  ui.rs
crates/dao-core/: Cargo.toml
crates/dao-core/src/: actions.rs  config.rs  lib.rs  persistence.rs  policy_engine.rs  policy_simulation.rs  reducer.rs  review-minimal.yaml  state.rs  tool_registry.rs  workflow.rs
crates/dao-core/src/reducer/tests/: approvals_policy.rs  artifact_guards.rs  auth_commands.rs  invariants.rs  log_buffer.rs  mod.rs  persona_projection.rs  projection_matrix.rs  selection_reconcile.rs
crates/dao-exec/: Cargo.toml  mod.rs  shell.rs
crates/dao-exec/src/: adapters.rs  codex.rs  contracts.rs  executor.rs  lib.rs  mod.rs
docs/: agent.md  i7-integration.md  i7-loop.md
