[package]
name = "dao-cli"
version = "0.1.0"
edition = "2021"
description = "DAO: The AI-powered software engineering assistant"
license = "MIT"
repository = "https://github.com/ShaileshRawat1403/dao"

[package.metadata.dist]
dist = true

[[bin]]
name = "dao"
path = "src/main.rs"

[dependencies]
dao-core = { path = "../dao-core" }
dao-exec = { path = "../dao-exec" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
