[package]
name = "dao-cli"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
description = "DAO: The AI-powered software engineering assistant"
license.workspace = true
repository.workspace = true

[package.metadata.dist]
dist = true

[[bin]]
name = "dao"
path = "src/main.rs"

[dependencies]
dao-core = { path = "../dao-core" }
dao-exec = { path = "../dao-exec" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
