[package]
name = "dao-core"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
chrono = { version = "0.4", default-features = true }
serde_yaml = "0.9"
evalexpr = "11"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
